@@ -1,3 +1,9 @@
+2010-08-06  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_alerts.php
+	godmode/alerts/alert_actions.php: Added the duplicate alert  action
+	feature for pending task 3038715
+
 2010-08-04  Miguel de Dios  <miguel.dedios@artica.es>
 	* include/functions_filemanager.php: added parameter $readOnly in the
 	function "file_explorer".
